Update html and add css

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>This is a html line</h1>
+    <p>Push the utton belows</p>
+    <button>Click here</button>
 </body>
 </html>
