Edited the button label

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>This is a html line</h1>
-    <p>Push the utton belows</p>
+    <p>Push the utton below the panels</p>
     <button>Click here</button>
 </body>
 </html>
