--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>This is a html line</h1>
     <p>Push the utton below the panels</p>
-    <button>Click wherever you want</button>
+    <button>Click wherever you want because I dont care</button>
 </body>
 </html>
